--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="js/extention.js"></script>
 	<link rel="stylesheet" href="slick/slick.css">
 	<link rel="stylesheet" href="slick/slick-theme.css">
-	<link rel="stylesheet" href="css/style-brand.css">
+	<link rel="stylesheet" href="css/style.css">
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css"> -->
 
@@ -74,7 +74,7 @@
 					<ul>
 						<li><a href="#">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
@@ -87,7 +87,7 @@
 					<ul>
 						<li><a href="#">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
@@ -98,58 +98,85 @@
 	</header>
     <!-- header-end -->
 
+	<!-- slide-st -->
 	<div class="brand_main">
 		<div class="wrap">
 			<ul class="slider">
-				<li><img src="img/Top1.jpg" alt=""></li>
-				<li><img src="img/Top2.jpg" alt=""></li>
-				<li><img src="img/Top3.jpg" alt=""></li>
-				<li><img src="img/Top1.jpg" alt=""></li>
-				<li><img src="img/Top2.jpg" alt=""></li>
-				<li><img src="img/Top3.jpg" alt=""></li>
+				<li><img src="img/slide.jpg" alt=""></li>
+				<li><img src="img/slide.jpg" alt=""></li>
+				<li><img src="img/slide.jpg" alt=""></li>
+				<li><img src="img/slide.jpg" alt=""></li>
+				<li><img src="img/slide.jpg" alt=""></li>
+				<li><img src="img/slide.jpg" alt=""></li>
 			</ul>
-		  </div>
-	  </div>
-
-	<div class="contents-oya">
-			<div class="brand_detail">
-				<div class="brand_ttl">
-					<h2>焼肉五苑</h2>
-				</div> 
-				<ul class="brand-list">
-					<li><a href="https://goen.tokukei.co.jp/tenpo/itoman.html" target="_blank" rel="noopener"><img src="img/itoman.jpg" alt="糸満店の写真"></a></li>
-					<li><a href="https://goen.tokukei.co.jp/tenpo/chatan.html" target="_blank" rel="noopener"><img src="img/chyatan.jpg" alt="北谷店の写真"></a></li>
-					<li><a href="https://goen.tokukei.co.jp/tenpo/uruma.html" target="_blank" rel="noopener"><img src="img/uruma.jpg" alt="うるま店の写真"></a></li>
-					<li><a href="https://goen.tokukei.co.jp/tenpo/yomitan.html" target="_blank" rel="noopener"><img src="img/yomitan.jpg" alt="読谷店の写真"></a></li>
-					<li><a href="https://goen.tokukei.co.jp/tenpo/nago.html" target="_blank" rel="noopener"><img src="img/nago.jpg" alt="名護店の写真"></a></li>
-					<li><a href="https://goen.tokukei.co.jp/tenpo/furujima.html" target="_blank" rel="noopener"><img src="img/acros.jpg" alt="アクロスプラザ古島駅前店の写真"></a></li>
-				</ul>
-			</div>
-			<!-- /.焼肉五苑--> 
-
-			<div class="brand_detail">
-				<div class="brand_ttl">
-					<h2>焼肉夢丸</h2>
-				</div> 
-				<ul class="brand-list">
-					<li><a href="https://yakiniku-yumemaru.com/shop/furujima/" target="_blank" rel="noopener"><img src="img/yume-naha.jpg" alt="糸満店の写真"></a></li>
-					<li><a href="https://yakiniku-yumemaru.com/shop/iso-2/" target="_blank" rel="noopener"><img src="img/yume-urasoe.jpg" alt="北谷店の写真"></a></li>
-					<li><a href="https://yakiniku-yumemaru.com/shop/mihama/" target="_blank" rel="noopener"><img src="img/yume-mihama.jpg" alt="うるま店の写真"></a></li>
-				</ul>
-			</div>
-			<!-- /.焼肉夢丸--> 
-			
-			<div class="brand_detail">
-				<div class="brand_ttl">
-					<h2>29cafeパインツリーブレス </h2>
-				</div> 
-				<ul class="brand-list">
-					<li><a href="https://pinetreebless.com/" target="_blank" rel="noopener"><img src="img/29cafe.jpg" alt="糸満店の写真"></a></li>
-				</ul>
-			</div>
-			<!-- /.29cafeパインツリーブレス --> 
 		</div>
-		<!-- /.contents-->
+	</div>
+    <!-- slide-end -->
+	<div class="contents-oya">
+		<div class="brand_detail">
+			<div class="brand_ttl">
+				<h1>タイトルタイトル</h1>
+				<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+				テキストテキストテキストテキストテキストテキスト</p>
+			</div> 
+		</div>
+		<div class="brand_detail">
+			<div class="brand_ttl">
+				<h2>タイトルタイトル</h2>
+			</div> 
+			<ul class="brand-list">
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+			</ul>
+		</div>
+		
     </div>    
 	<!-- /.contents-oya-->
 
@@ -160,7 +187,7 @@
 				<ul class="list" >
 					<li><a href="#">ホーム</a></li>
 					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-					<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 					<li><a href="#" target="_blank" rel="noopener">採用</a></li>
 				</ul>
@@ -178,10 +205,10 @@
 				<a href="#"><img src="img/foot_logo_tokukei.gif" alt=""></a>
 			</div>
 			<div class="sns">
-				<a href="https://www.facebook.com/TheBeverlyClub" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
-				<a href="https://twitter.com/club_beverly" target="_blank" rel="noopener"><img src="img/tw2.png" alt="" width="15"></a>
-				<a href="https://www.instagram.com/thebeverlyclub.official/?utm_medium=copy_link" target="_blank" rel="noopener"><img src="img/ico_inst.png" alt="" width="16"></a>
-				<a href="https://page.line.me/559okfle?openQrModal=true" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
+				<a href="#" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
+				<a href="#" target="_blank" rel="noopener"><img src="img/tw2.png" alt="" width="15"></a>
+				<a href="#" target="_blank" rel="noopener"><img src="img/ico_inst.png" alt="" width="16"></a>
+				<a href="#" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
 				<!-- <a href=""><img src="img/mail3.png" alt="" width="20"></a> -->
 			</div>
 			<!-- ページトップ-st -->
