--- a/franchise.html
+++ b/franchise.html
@@ -4,13 +4,18 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>フィランチャイズ</title>
+	<title>コーポレートサイト</title>
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="slick/slick.min.js"></script>
+	<script src="js/extention.js"></script>
+	<link rel="stylesheet" href="slick/slick.css">
+	<link rel="stylesheet" href="slick/slick-theme.css">
 	<link rel="stylesheet" href="css/style-franchise.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css"> -->
 
 </head>
-<body>
+
 	<!-- jQuery-st -->
 	<script>
 		// page-top
@@ -69,8 +74,8 @@
 					<ul>
 						<li><a href="#">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
-						<li><a href="#" target="_blank" rel="noopener">フランチャイズ募集</a></li>
+						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
@@ -82,8 +87,8 @@
 					<ul>
 						<li><a href="#">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
-						<li><a href="#" target="_blank" rel="noopener">フランチャイズ募集</a></li>
+						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
@@ -132,8 +137,6 @@
 		</ul>
 
 	</div>
-	
-	</div>
 	<!-- footer-st -->
 	<footer>
 		<div class="ft-nav-oya">
@@ -141,8 +144,8 @@
 				<ul class="list" >
 					<li><a href="#">ホーム</a></li>
 					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
-					<li><a href="#" target="_blank" rel="noopener">フランチャイズ募集</a></li>
+					<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 					<li><a href="#" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
@@ -159,10 +162,10 @@
 				<a href="#"><img src="img/foot_logo_tokukei.gif" alt=""></a>
 			</div>
 			<div class="sns">
-				<a href="#" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
-				<a href="#" target="_blank" rel="noopener"><img src="img/tw2.png" alt="" width="15"></a>
-				<a href="#" target="_blank" rel="noopener"><img src="img/ico_inst.png" alt="" width="16"></a>
-				<a href="#" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
+				<a href="https://www.facebook.com/TheBeverlyClub" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
+				<a href="https://twitter.com/club_beverly" target="_blank" rel="noopener"><img src="img/tw2.png" alt="" width="15"></a>
+				<a href="https://www.instagram.com/thebeverlyclub.official/?utm_medium=copy_link" target="_blank" rel="noopener"><img src="img/ico_inst.png" alt="" width="16"></a>
+				<a href="https://page.line.me/559okfle?openQrModal=true" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
 				<!-- <a href=""><img src="img/mail3.png" alt="" width="20"></a> -->
 			</div>
 			<!-- ページトップ-st -->
