--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
@@ -89,7 +89,7 @@
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
@@ -189,7 +189,7 @@
 					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
 					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-					<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+					<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
 			<div class="ft-nav">
