--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				
 				<nav class="globalMenuSp">
 					<ul>
-						<li><a href="#">ホーム</a></li>
+						<li><a href="index.html">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
@@ -85,7 +85,7 @@
 			<div class="nav-oya">
 				<nav class="nav">
 					<ul>
-						<li><a href="#">ホーム</a></li>
+						<li><a href="index.html">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
@@ -185,7 +185,7 @@
 		<div class="ft-nav-oya">
 			<div class="ft-nav">
 				<ul class="list" >
-					<li><a href="#">ホーム</a></li>
+					<li><a href="index.html">ホーム</a></li>
 					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
 					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
