--- a/brand.html
+++ b/brand.html
@@ -74,9 +74,9 @@
 					<ul>
 						<li><a href="index.html">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
@@ -87,9 +87,9 @@
 					<ul>
 						<li><a href="index.html">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
@@ -160,9 +160,9 @@
 				<ul class="list" >
 					<li><a href="index.html">ホーム</a></li>
 					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-					<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-					<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+					<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
 			<div class="ft-nav">
