--- a/franchise.html
+++ b/franchise.html
@@ -72,12 +72,12 @@
 				
 				<nav class="globalMenuSp">
 					<ul>
-						<li><a href="#">ホーム</a></li>
+						<li><a href="index.html">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -85,12 +85,12 @@
 			<div class="nav-oya">
 				<nav class="nav">
 					<ul>
-						<li><a href="#">ホーム</a></li>
+						<li><a href="index.html">ホーム</a></li>
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -142,11 +142,11 @@
 		<div class="ft-nav-oya">
 			<div class="ft-nav">
 				<ul class="list" >
-					<li><a href="#">ホーム</a></li>
+					<li><a href="index.html">ホーム</a></li>
 					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-					<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
+					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-					<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+					<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
 			<div class="ft-nav">
