--- a/franchise.html
+++ b/franchise.html
@@ -76,8 +76,8 @@
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="recruit.html" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -89,8 +89,8 @@
 						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="recruit.html" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
