--- a/open_flow.html
+++ b/open_flow.html
@@ -4,49 +4,30 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>フィランチャイズ</title>
-	<link rel="stylesheet" href="css/style-openflow.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
-
+	<title>コーポレートサイト</title>
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="slick/slick.min.js"></script>
+	<script src="js/extention.js"></script>
+	<link rel="stylesheet" href="slick/slick.css">
+	<link rel="stylesheet" href="slick/slick-theme.css">
+	<link rel="stylesheet" href="css/style-recruit.css">
 </head>
-<body>
+
 	<!-- jQuery-st -->
 	<script>
-		// page-top
-		jQuery(function() {
-			var pagetop = $('#page_top');   
-			pagetop.hide();
-			$(window).scroll(function () {
-				if ($(this).scrollTop() > 100) {  //100pxスクロールしたら表示
-					pagetop.fadeIn();
-				} else {
-					pagetop.fadeOut();
-				}
-			});
-			pagetop.click(function () {
-				$('body,html').animate({
-					scrollTop: 0
-				}, 500); //0.5秒かけてトップへ移動
-				return false;
-			});
+			// ハンバーガーメニュー
+			$(function() {
+		$('.hamburger').click(function() {
+			$(this).toggleClass('active');
+	
+			if ($(this).hasClass('active')) {
+				$('.globalMenuSp').addClass('active');
+			} else {
+				$('.globalMenuSp').removeClass('active');
+			}
 		});
-
-
-
-		// ハンバーガーメニュー
-		$(function() {
-    $('.hamburger').click(function() {
-        $(this).toggleClass('active');
- 
-        if ($(this).hasClass('active')) {
-            $('.globalMenuSp').addClass('active');
-        } else {
-            $('.globalMenuSp').removeClass('active');
-        }
-    });
-});
-   </script>   
+	});
+   	</script>   
     <!-- jQuery-end -->
 
 
@@ -67,12 +48,12 @@
 				
 				<nav class="globalMenuSp">
 					<ul>
-						<li><a href="#">ホーム</a></li>
-						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
-						<li><a href="#" target="_blank" rel="noopener">フランチャイズ募集</a></li>
+						<li><a href="index.html">ホーム</a></li>
+						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -80,12 +61,12 @@
 			<div class="nav-oya">
 				<nav class="nav">
 					<ul>
-						<li><a href="#">ホーム</a></li>
-						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
-						<li><a href="#" target="_blank" rel="noopener">フランチャイズ募集</a></li>
+						<li><a href="index.html">ホーム</a></li>
+						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -93,89 +74,72 @@
 	</header>
     <!-- header-end -->
 
-	<div class="contents-oya">
-		<div class="contents">
-			<div class="main">
-				<div class="mainvisual">
-					<h1>開業までの流れ</h1>
-				</div>
-			</div>
-		</div>
-
-		<div class="contents">
-			<p>加盟をご希望される場合の、お問い合わせから開業までの流れをご説明します。<br>
-				物件のご提案までに与信審査・オーナー面談を実施させて頂いております。
-			</p>
-		</div>
-		<ul class="box">
-			<li class="works-card">
-				<a href="#">
-					<img src="img/fcbrand_1.jpg" alt="">
-					<h3>焼肉五苑</h3>
-					<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-					   テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-					</p>
-			    </a>
-			</li>
-
-			<li class="works-card">
-				<a href="#">
-					<img src="img/fcbrand_2.jpg" alt="">
-					<h3>焼肉夢丸</h3>
-					<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-					   テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-					</p>
-			    </a>
-			</li>
-			
-			<li class="works-card">
-				<a href="#">
-					<img src="img/fcbrand_3.jpg" alt="">
-					<h3>29cafe パインツリーブレス</h3>
-					<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-					   テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-					</p>
-				</a>
-		    </li>  
-		</ul>
-
-	</div>
 	
-	</div>
+	<div class="contents-oya">
+		<div class="brand_detail">
+			<div class="brand_ttl">
+				<h1>一緒に働こう</h1>
+				<p>食べ歩きの好きな方
+				   <br>好奇心旺盛で学ぶ意欲のある方
+				   <br>笑顔・禁煙に協力出来る方
+				   <br>求めます
+				</p>
+			</div> 
+		</div>
+		<div class="brand_detail2">
+			<!-- <div class="brand_ttl">
+				<h2>タイトルタイトル</h2>
+			</div>  -->
+			<ul class="brand-list">
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+				<li>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<p>テキストテキストテキストテキストテキスト</p>
+				</li>
+			</ul>
+		</div>
+		
+    </div>    
+	<!-- /.contents-oya-->
+
 	<!-- footer-st -->
 	<footer>
 		<div class="ft-nav-oya">
 			<div class="ft-nav">
 				<ul class="list" >
-					<li><a href="#">ホーム</a></li>
-					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-					<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
-					<li><a href="#" target="_blank" rel="noopener">フランチャイズ募集</a></li>
+					<li><a href="index.html">ホーム</a></li>
+					<li><a href="contact.html" target="_blank" rel="noopener">企業情報</a></li>
+					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
+					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 					<li><a href="#" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
 			<div class="ft-nav">
-				<div class="ft-contact"><a href="#" target="_blank" rel="noopener">お問い合わせ</a></div>
+				<div class="ft-contact"><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></div>
 		    </div>
 			<div class="ft-nav">
 				<ul>
-					<a href="#" target="_blank" rel="noopener"><li>サイトマップ</li></a>
-					<a href="#" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
+					<a href="about.html" target="_blank" rel="noopener"><li>サイトのご利用について</li></a>
+					<a href="privacy policy.html" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
 				</ul>
 		    </div>
 			<div class="ft-logo">
 				<a href="#"><img src="img/foot_logo_tokukei.gif" alt=""></a>
 			</div>
 			<div class="sns">
-				<a href="https://www.facebook.com/TheBeverlyClub" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
-				<a href="https://twitter.com/club_beverly" target="_blank" rel="noopener"><img src="img/tw2.png" alt="" width="15"></a>
-				<a href="https://www.instagram.com/thebeverlyclub.official/?utm_medium=copy_link" target="_blank" rel="noopener"><img src="img/ico_inst.png" alt="" width="16"></a>
-				<a href="https://page.line.me/559okfle?openQrModal=true" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
+				<a href="#" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
+				<a href="#" target="_blank" rel="noopener"><img src="img/tw2.png" alt="" width="15"></a>
+				<a href="#" target="_blank" rel="noopener"><img src="img/ico_inst.png" alt="" width="16"></a>
+				<a href="privacy policy.html" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
 				<!-- <a href=""><img src="img/mail3.png" alt="" width="20"></a> -->
 			</div>
-			<!-- ページトップ-st -->
-			<div id="page_top"><a href="#"></a></div>
-			<!-- ページトップ-end -->
 		</div>
 		<div class="Copyright">
 			<small>Copyright c Tokukei. All Rights Reserved.</small>
