--- a/index.html
+++ b/index.html
@@ -1,57 +1,34 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>コーポレートサイト</title>
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="slick/slick.min.js"></script>
-	<script src="js/extention.js"></script>
-	<link rel="stylesheet" href="slick/slick.css">
-	<link rel="stylesheet" href="slick/slick-theme.css">
-	<link rel="stylesheet" href="css/style.css">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css"> -->
-
-</head>
+<body>
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>コーポレートサイト</title>
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="slick/slick.min.js"></script>
+		<script src="js/extention.js"></script>
+		<link rel="stylesheet" href="slick/slick.css">
+		<link rel="stylesheet" href="slick/slick-theme.css">
+		<link rel="stylesheet" href="css/style.css">
+	</head>
 
 	<!-- jQuery-st -->
 	<script>
-		// page-top
-		jQuery(function() {
-			var pagetop = $('#page_top');   
-			pagetop.hide();
-			$(window).scroll(function () {
-				if ($(this).scrollTop() > 100) {  //100pxスクロールしたら表示
-					pagetop.fadeIn();
-				} else {
-					pagetop.fadeOut();
-				}
-			});
-			pagetop.click(function () {
-				$('body,html').animate({
-					scrollTop: 0
-				}, 500); //0.5秒かけてトップへ移動
-				return false;
-			});
-		});
-
-
-
 		// ハンバーガーメニュー
-		$(function() {
-    $('.hamburger').click(function() {
-        $(this).toggleClass('active');
- 
-        if ($(this).hasClass('active')) {
-            $('.globalMenuSp').addClass('active');
-        } else {
-            $('.globalMenuSp').removeClass('active');
-        }
-    });
-});
-   </script>   
+			$(function() {
+			$('.hamburger').click(function() {
+			$(this).toggleClass('active');
+	
+			if ($(this).hasClass('active')) {
+				$('.globalMenuSp').addClass('active');
+			} else {
+				$('.globalMenuSp').removeClass('active');
+			}
+		});
+	});
+    </script>   
     <!-- jQuery-end -->
 
 
@@ -72,12 +49,12 @@
 				
 				<nav class="globalMenuSp">
 					<ul>
-						<li><a href="index.html">ホーム</a></li>
-						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
+						<li><a href="#">ホーム</a></li>
+						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -85,12 +62,12 @@
 			<div class="nav-oya">
 				<nav class="nav">
 					<ul>
-						<li><a href="index.html">ホーム</a></li>
-						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
+						<li><a href="#">ホーム</a></li>
+						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -112,21 +89,25 @@
 		</div>
 	</div>
     <!-- slide-end -->
+
+	<!-- /.contents-oya-st-->
 	<div class="contents-oya">
 		<div class="brand_detail">
 			<div class="brand_ttl">
-				<h1>タイトルタイトル</h1>
-				<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-				テキストテキストテキストテキストテキストテキスト</p>
+				<h1>お客様満足へのこだわり</h1>
+				<p>沢山のお客様からいただく驚きや満足の声の為に、私たちは全てにこだわります。<br>
+					夢丸を選んで来店してくれたお客様に時間を気にせず、ゆっくりしていただける様に<br>
+					”とことん”こだわり続けます。
+				</p>
 			</div> 
 		</div>
 		<div class="brand_detail">
 			<div class="brand_ttl">
-				<h2>タイトルタイトル</h2>
+				<h2><span>"わたしたちが伝えたいこと"</span><br>MESSAGE</h2>
 			</div> 
 			<ul class="brand-list">
 				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
+					<a href="#" target="_blank" rel="noopener"><img src="img/message_03.jpg" alt=""></a>
 					<p>テキストテキストテキストテキストテキスト</p>
 				</li>
 				<li>
@@ -176,29 +157,29 @@
 				</li>
 			</ul>
 		</div>
-		
     </div>    
 	<!-- /.contents-oya-->
 
+	
 	<!-- footer-st -->
 	<footer>
 		<div class="ft-nav-oya">
 			<div class="ft-nav">
 				<ul class="list" >
-					<li><a href="index.html">ホーム</a></li>
-					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
+					<li><a href="#">ホーム</a></li>
+					<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
 					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 					<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
 			<div class="ft-nav">
-				<div class="ft-contact"><a href="#" target="_blank" rel="noopener">お問い合わせ</a></div>
+				<div class="ft-contact"><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></div>
 		    </div>
 			<div class="ft-nav">
 				<ul>
-					<a href="#" target="_blank" rel="noopener"><li>サイトマップ</li></a>
-					<a href="#" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
+					<a href="about.html" target="_blank" rel="noopener"><li>サイトのご利用について</li></a>
+					<a href="privacy policy.html" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
 				</ul>
 		    </div>
 			<div class="ft-logo">
@@ -211,9 +192,6 @@
 				<a href="#" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
 				<!-- <a href=""><img src="img/mail3.png" alt="" width="20"></a> -->
 			</div>
-			<!-- ページトップ-st -->
-			<div id="page_top"><a href="#"></a></div>
-			<!-- ページトップ-end -->
 		</div>
 		<div class="Copyright">
 			<small>Copyright c Tokukei. All Rights Reserved.</small>
