--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 	<script src="js/extention.js"></script>
 	<link rel="stylesheet" href="slick/slick.css">
 	<link rel="stylesheet" href="slick/slick-theme.css">
-	<link rel="stylesheet" href="css/style-recruit.css">
+	<link rel="stylesheet" href="css/style-contact.css">
 </head>
 
 	<!-- jQuery-st -->
@@ -52,8 +52,8 @@
 						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -65,8 +65,8 @@
 						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -74,55 +74,59 @@
 	</header>
     <!-- header-end -->
 
-	
 	<div class="contents-oya">
-		<div class="brand_detail">
-			<div class="brand_ttl">
-				<h1>一緒に働こう</h1>
-				<p>食べ歩きの好きな方
-				   <br>好奇心旺盛で学ぶ意欲のある方
-				   <br>笑顔・禁煙に協力出来る方
-				   <br>求めます
-				</p>
-			</div> 
+		<div class="contents">
+			<div class="main">
+				<div class="mainvisual">
+					<h1></h1>
+				</div>
+			</div>
 		</div>
-		<div class="brand_detail2">
-			<!-- <div class="brand_ttl">
-				<h2>タイトルタイトル</h2>
-			</div>  -->
-			<ul class="brand-list">
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-			</ul>
-		</div>
-		
-    </div>    
-	<!-- /.contents-oya-->
 
+		<div class="contents">
+			<p>お気付きの点がございましたら下記までお問い合わせください。<br>
+
+				※ご回答には、数日お時間をいただく場合がございます。ご了承くださいませ。
+			</p>
+		</div>
+		<div class="box">
+			<div class="contact-ttl">
+				<h3>商品・サービス等<br>に関するお問い合わせ</h3>
+			</div>
+            <div class="contact-details">
+               <ul>
+				   <li><a href="#">フォームからのお問い合わせ</a></li>
+				   <li><a href="#">メールでのお問い合わせ</a></li>
+				   <li><a href="#">お電話でのお問い合わせ</a></li>
+			   </ul>
+			</div>
+		</div>
+		<div class="box">
+			<div class="contact-ttl">
+				<h3>FC加盟<br>お問い合わせ</h3>
+			</div>
+            <div class="contact-details">
+              <ul>
+				  <li><a href="contact_fc.html">FC加盟店についてのお問い合わせ</a></li>
+			  </ul>
+			</div>
+		</div>
+
+	</div>
 	<!-- footer-st -->
 	<footer>
 		<div class="ft-nav-oya">
 			<div class="ft-nav">
 				<ul class="list" >
 					<li><a href="index.html">ホーム</a></li>
-					<li><a href="contact.html" target="_blank" rel="noopener">企業情報</a></li>
+					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
 					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 					<li><a href="#" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
 			<div class="ft-nav">
-				<div class="ft-contact"><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></div>
+				<div class="ft-contact"><a href="#" target="_blank" rel="noopener">お問い合わせ</a></div>
 		    </div>
 			<div class="ft-nav">
 				<ul>
@@ -137,7 +141,7 @@
 				<a href="#" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
 				<a href="#" target="_blank" rel="noopener"><img src="img/tw2.png" alt="" width="15"></a>
 				<a href="#" target="_blank" rel="noopener"><img src="img/ico_inst.png" alt="" width="16"></a>
-				<a href="privacy policy.html" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
+				<a href="#" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
 				<!-- <a href=""><img src="img/mail3.png" alt="" width="20"></a> -->
 			</div>
 		</div>
