--- a/privacy policy.html
+++ b/privacy policy.html
@@ -5,12 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>コーポレートサイト</title>
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="slick/slick.min.js"></script>
-	<script src="js/extention.js"></script>
-	<link rel="stylesheet" href="slick/slick.css">
-	<link rel="stylesheet" href="slick/slick-theme.css">
-	<link rel="stylesheet" href="css/style-recruit.css">
+	<link rel="stylesheet" href="css/style-privacy policy.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
 </head>
 
 	<!-- jQuery-st -->
@@ -52,7 +49,7 @@
 						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
@@ -65,7 +62,7 @@
 						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
 						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
@@ -78,34 +75,54 @@
 	<div class="contents-oya">
 		<div class="brand_detail">
 			<div class="brand_ttl">
-				<h1>一緒に働こう</h1>
-				<p>食べ歩きの好きな方
-				   <br>好奇心旺盛で学ぶ意欲のある方
-				   <br>笑顔・禁煙に協力出来る方
-				   <br>求めます
+				<h2>プライバシーポリシー</h2>
+				<p>株式会社徳慶（以下「当社」といいます）は、お客様及び当社の事業活動に関わるすべての方々から取得する個人情報について、個人情報の保護に関する法律（以下「個人情報保護法」といいます）に基づき、「個人情報保護方針」を定めております。</p>
+			</div> 
+		</div>
+		<div class="brand_detail">
+			<div class="brand_ttl">
+				<h3>個人情報保護方針</h3>
+				<p>当社は、個人情報保護法を遵守し、氏名、住所、電話番号、Eメールアドレス等個人を特定する事の出来る情報 ( 以下、個人情報といいます ) を適正に取扱う事が企業の重要な社会的責務であるとの認識に立ち、以下のとおり、個人情報保護に関する基本方針を定めております。</p>
+			</div> 
+		</div>
+		<div class="brand_detail">
+			<div class="brand_ttl">
+				<h3>個人情報の取得</h3>
+				<p>当社は、個人情報を取得する際には、その利用目的を明示し必要な範囲で、適法かつ公正な手段によって取得いたします。</p>
+			</div> 
+		</div>
+		<div class="brand_detail">
+			<div class="brand_ttl">
+				<h3>個人情報の利用目的</h3>
+				<p>当店にお問合せいただいた方の個人情報は、以下の目的において使用します。</p>
+				<ul>
+					<li class="privacy">お問合せいただいたお客様に対し、当店からのお知らせを郵配送もしくは<br>電子メールにてお届けするため</li>
+					<li class="privacy">ご予約の確認、ご宴会の打合せ時</li>
+				</ul>
+			</div> 
+		</div>
+		<div class="brand_detail">
+			<div class="brand_ttl">
+				<h3>個人情報の第三者への提供について</h3>
+				<p>当社では、同意をいただいた場合、および法令に基づき司法機関、行政機関から法的義務を伴う要請を受けた場合を除き、ご提供いただいた個人情報を第三者に預託、提供いたしません。</p>
+			</div> 
+		</div>
+		<div class="brand_detail">
+			<div class="brand_ttl">
+				<h3>個人情報に対する安全対策の実施</h3>
+				<p>当社では、個人情報を、紛失、破壊、不正な流出、改ざんから保護するために合理的な安全対策を講じます。</p>
+			</div> 
+		</div>
+		<div class="brand_detail">
+			<div class="brand_ttl">
+				<h3>個人情報の問合せ先について</h3>
+				<p>株式会社 徳慶</p>
+				<p>
+					〒904-0102　沖縄県北谷町字伊平417-1<br>
+                    TEL：098-926-0158
 				</p>
 			</div> 
 		</div>
-		<div class="brand_detail2">
-			<!-- <div class="brand_ttl">
-				<h2>タイトルタイトル</h2>
-			</div>  -->
-			<ul class="brand-list">
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-				<li>
-					<a href="#" target="_blank" rel="noopener"><img src="img/message_01.jpg" alt=""></a>
-					<p>テキストテキストテキストテキストテキスト</p>
-				</li>
-			</ul>
-		</div>
-		
     </div>    
 	<!-- /.contents-oya-->
 
@@ -115,10 +132,10 @@
 			<div class="ft-nav">
 				<ul class="list" >
 					<li><a href="index.html">ホーム</a></li>
-					<li><a href="contact.html" target="_blank" rel="noopener">企業情報</a></li>
+					<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
 					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-					<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+					<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
 			<div class="ft-nav">
@@ -127,7 +144,7 @@
 			<div class="ft-nav">
 				<ul>
 					<a href="about.html" target="_blank" rel="noopener"><li>サイトのご利用について</li></a>
-					<a href="privacy policy.html" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
+					<a href="#" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
 				</ul>
 		    </div>
 			<div class="ft-logo">
@@ -137,7 +154,7 @@
 				<a href="#" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
 				<a href="#" target="_blank" rel="noopener"><img src="img/tw2.png" alt="" width="15"></a>
 				<a href="#" target="_blank" rel="noopener"><img src="img/ico_inst.png" alt="" width="16"></a>
-				<a href="privacy policy.html" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
+				<a href="#" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
 				<!-- <a href=""><img src="img/mail3.png" alt="" width="20"></a> -->
 			</div>
 		</div>
