--- a/franchise.html
+++ b/franchise.html
@@ -128,7 +128,7 @@
 			<div class="ft-nav">
 				<div class="ft-contact"><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></div>
 		    </div>
-			<div class="ft-nav">
+			<div class="ft-nav2">
 				<ul>
 					<a href="about.html" target="_blank" rel="noopener"><li>サイトのご利用について</li></a>
 					<a href="privacy policy.html" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
