--- a/company.html
+++ b/company.html
@@ -169,8 +169,8 @@
 		<div class="ft-nav-oya">
 			<div class="ft-nav">
 				<ul class="list" >
-					<li><a href="index.html">ホーム</a></li>
-					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
+					<li><a href="#">ホーム</a></li>
+					<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
 					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 					<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
@@ -179,7 +179,7 @@
 			<div class="ft-nav">
 				<div class="ft-contact"><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></div>
 		    </div>
-			<div class="ft-nav">
+			<div class="ft-nav2">
 				<ul>
 					<a href="about.html" target="_blank" rel="noopener"><li>サイトのご利用について</li></a>
 					<a href="privacy policy.html" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
@@ -195,9 +195,6 @@
 				<a href="#" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
 				<!-- <a href=""><img src="img/mail3.png" alt="" width="20"></a> -->
 			</div>
-			<!-- ページトップ-st -->
-			<div id="page_top"><a href="#"></a></div>
-			<!-- ページトップ-end -->
 		</div>
 		<div class="Copyright">
 			<small>Copyright c Tokukei. All Rights Reserved.</small>
