--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
 		<div class="contents">
 			<p>お気付きの点がございましたら下記までお問い合わせください。<br>
 
-				※ご回答には、数日お時間をいただく場合がございます。ご了承くださいませ。
+				※ご回答には、数日お時間をいただく場合がございます。<br>ご了承くださいませ。
 			</p>
 		</div>
 		<div class="box">
