--- a/franchise.html
+++ b/franchise.html
@@ -91,21 +91,21 @@
 		</div>
 		<ul class="box">
 			<li class="works-card">
-				<a href="#">
+				<a href="fc_support.html">
 					<img src="img/fc_top1.jpg" alt="">
 					<h3>FC事業サポート</h3>
 			    </a>
 			</li>
 
 			<li class="works-card">
-				<a href="#">
+				<a href="fc_brand.html">
 					<img src="img/fc_top.jpg" alt="">
 					<h3>FC加盟店サポート</h3>
 			    </a>
 			</li>
 			
 			<li class="works-card">
-				<a href="#">
+				<a href="open_flow.html">
 					<img src="img/fc_top3.jpg" alt="">
 					<h3>開業までの流れ</h3>
 				</a>
