--- a/open_flow.html
+++ b/open_flow.html
@@ -129,14 +129,14 @@
 			<div class="ft-nav">
 				<div class="ft-contact"><a href="#" target="_blank" rel="noopener">お問い合わせ</a></div>
 		    </div>
-			<div class="ft-nav">
+			<div class="ft-nav2">
 				<ul>
 					<a href="about.html" target="_blank" rel="noopener"><li>サイトのご利用について</li></a>
 					<a href="privacy policy.html" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
 				</ul>
 		    </div>
 			<div class="ft-logo">
-				<a href="#"><img src="img/foot_logo_tokukei.gif" alt=""></a>
+				<a href="#"><img src="img/foot_logo_tokukei.png" alt=""></a>
 			</div>
 			<div class="sns">
 				<a href="#" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
