--- a/fc_brand.html
+++ b/fc_brand.html
@@ -81,7 +81,7 @@
 		</div>
 
 		<div class="contents">
-			<h2>焼肉店のフランチャイズ募集〜独立開業をご検討中の皆さまへ</h2>
+			<h2>焼肉店のフランチャイズ募集<br>独立開業をご検討中の皆さまへ</h2>
 			<p>徳慶グループが展開する<br>
 				沖縄に展開する知名度の高い「焼肉五苑」の<br>
 				コンセプト・事例をご紹介します。
