--- a/fc_support.html
+++ b/fc_support.html
@@ -77,7 +77,7 @@
 		<div class="contents">
 			<div class="main">
 				<div class="mainvisual">
-					<h1>開業までの流れ</h1>
+					<h1>FC事業サポート</h1>
 				</div>
 			</div>
 		</div>
