--- a/fc_support.html
+++ b/fc_support.html
@@ -108,7 +108,7 @@
 							<div class="details">
 								<img src="img/fcsu-3.png" alt="">
 								<h3>支援制度</h3>
-								<p>様々な事業支援により、売上・収益の最大化を実現。</p>
+								<p>様々な事業支援により、売上・収益の最大化を実現。テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 						    </div>
 						</div>
 					</div>
